# Task-Center

./: .gitignore  .gitlab-ci.yml  README.md  TODO.txt  pyproject.toml
resources/: Task-Center.desktop
task_center/: __main__.py
task_center/core/: app.py
task_center/core/appinfo/: __init__.py  appinfo.py  manager.py
task_center/core/datastores/: _common_.py
task_center/core/models/: source.py
task_center/core/settings/: manager.py  settings.py
task_center/core/sources/: caldav.py  database.py  decsync.py  source.py  sources.py
task_center/core/tasks/: __init__.py  manager.py  recurrence.py
task_center/core/tasks/models/: collection.py  tag.py  task.py
task_center/core/tasks/sources/: __init__.py  caldav.py  database.py  decsync.py  generic.py
task_center/ui/gtk/: __init__.py  gtk.py
task_center/ui/gtk/main_window/: __init__.py  main_window.glade  main_window.py
task_center/ui/gtk/main_window/about/: about_dialog.py
task_center/ui/gtk/main_window/about_dialog/: about_dialog.py
task_center/ui/gtk/main_window/collections/: __init__.py  collection_sidebar.glade  collection_sidebar.py
task_center/ui/gtk/main_window/collections_sidebar/: __init__.py  collection_sidebar.py  collections_sidebar.glade  collections_sidebar.py
task_center/ui/gtk/main_window/filters_sidebar/: filter_sidebar.py
task_center/ui/gtk/main_window/settings/: settings_dialog.py
task_center/ui/gtk/main_window/settings_dialog/: settings_dialog.glade  settings_dialog.py
task_center/ui/gtk/main_window/tags_sidebar/: tag_sidebar.glade  tags.py
task_center/ui/gtk/main_window/task_sidebar/: task_sidebar.glade  task_sidebar.py
task_center/ui/gtk/main_window/tasklist/: __init__.py  tasklist.glade  (+1 more)
task_center/ui/gtk/setting_window/: __init__.py
task_center/ui/gtk/settings_dialog/: settings_dialog.py
tests/: manual_test.py  test_dateTimePopover.py  test_task_recurrence.py
tests/tests/: manual_test.py
(+64 files in other folders)
