[appinfo]
appid = "com.github.beatlink.task-center"

[tool.poetry]
name = "Task Center"
version = "0.0.1"
description = "Task Center is a modern, intuitive and powerful to-do list and task management center for Linux that features tags, filters, repeating/recurring tasks, start and due dates and subtasks."
authors = ["BeatLink <beatlink+github@simplelogin.co>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/BeatLink/Task-Center"
repository = "https://github.com/BeatLink/Task-Center"
documentation = "https://github.com/BeatLink/Task-Center"
keywords = [
    "todo",
    "to-do",
    "tasks",
    "projects",
    "subtask",
    "recurrence",
    "recurring",
    "repeating"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Office/Business :: Scheduling"
]
packages = [{include = "task_center"}]
include = ['README.md', 'LICENSE.txt', 'docs', 'resources', 'tests', '*.glade', 'pyproject.toml']
exclude = []

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/beatlink-code/Task-Center/-/issues"

[tool.poetry.scripts]
task-center = 'task_center.ui.app:run_app'

[tool.poetry.dependencies]
python = "^3.9"
pycairo = "^1.18"
pygobject = "^3.30"
arrow = "^1.2.3"
pyxdg = "^0.28"
toml = "^0.10"
poetry = "^1.2.2"
appdirs = "^1.4.3"
caldav = "^0.11.0"
icalendar = "^5.0.1"
libdecsync = "^2.2.1"
peewee = "^3.15.3"
pyyaml = "^6.0"
setuptools = "^65.5.0"
radicale = "^3.1.8"
charset-normalizer = "^3.0.0"
cryptography = "^38.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


